--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "ejs": "^2.5.2",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.1",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
